fix: change name holder for image

--- a/completed-examples/lesson-03-images-links/index.html
+++ b/completed-examples/lesson-03-images-links/index.html
@@ -18,6 +18,6 @@
 <p>Si quieres aprender más, visita <a href="https://www.w3schools.com/">W3Schools</a>.</p>
 
 <h2>Una Imagen Genial</h2>
-<img src="https://picsum.photos/id/237/400/300" alt="Un perro cachorro negro">
+<img src="https://picsum.photos/id/237/400/300" alt="Un cachorro">
 </body>
 </html>
