--- a/starter-files/lesson-04-css/index.html
+++ b/starter-files/lesson-04-css/index.html
@@ -19,6 +19,6 @@
 <p>Si quieres aprender más, visita <a href="https://www.w3schools.com/">W3Schools</a>.</p>
 
 <h2>Una Imagen Genial</h2>
-<img src="https://picsum.photos/id/237/400/300" alt="Un perro cachorro negro">
+<img src="https://picsum.photos/id/237/400/300" alt="Un cachorro">
 </body>
 </html>
