--- a/completed-examples/lesson-05-profile-page/index.html
+++ b/completed-examples/lesson-05-profile-page/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Mi Perfil Personal</title>
     <link rel="stylesheet" href="style.css">
 </head>
